--- a/RSA_examples.ipynb
+++ b/RSA_examples.ipynb
@@ -6,7 +6,7 @@
       "name": "RSA-examples.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOLAftzeDngfkCjWLzb6Ymz",
+      "authorship_tag": "ABX9TyPB/GlsPCmZ1C7dmshGcMQE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -712,7 +712,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Appendix: Interactive"
+        "## Appendix: Interactive\n",
+        "\n",
+        "Requires e,n and d to be set.\n",
+        "\n",
+        "Note:\n",
+        "- because in the example n is small, every m character in the input is encrypted. \n",
+        "- Every m character is encrypted with the same result. And this is a problem.\n",
+        "- In reality n is 1024 bits minimum. So 128 bytes. There are rules for the size of the message and the size of n, but not yet here. I assume that from m, a block of bits is taken to be encrypted, where the block size is the number of bits of n. When the remaining message bits is less then the number of bits in n, then m is padded with certain padding algorithms.\n",
+        "\n",
+        "Example:\n",
+        "- When typing `Helloooooo` the `o` is also repeating in the encrypted message. That is not good, since text frequency analysis can be used on long enough messages."
       ],
       "metadata": {
         "id": "WfbvI26V0tqS"
@@ -724,56 +734,33 @@
         "message = input(\"Enter the text message to be encrypted: \")\n",
         "m = [ord(ch) for ch in message]\n",
         "\n",
-        "#def weak(pub, message):\n",
-        "#  n, e = pub\n",
-        "#  m = message\n",
-        "#  if e == 3:\n",
-        "#    print('Small value of e (weakness)')\n",
-        "#  if m < math.pow(n, 1/e):\n",
-        "#    print('Small value of m (weakness)')\n",
-        "\n",
-        "#weak(pub, message)\n",
-        "\n",
-        "# encrypt to ciphertext\n",
-        "c = [i**e % n for i in m]\n",
-        "\n",
+        "# encryption using public key n,e\n",
+        "c = [pow(i, e, n) for i in m]\n",
         "print(\"Ciphertext is:\", c)\n",
         "\n",
-        "mm = [i**d % n for i in c]\n",
-        "\n",
+        "# decryption using private key n,d\n",
+        "mm = [pow(i, d, n) for i in c]\n",
         "print(f'Decrypted: {mm}')\n",
         "print(\"Decrypted message:\", ''.join([chr(i) for i in mm]))\n",
-        "\n",
-        "# The following works, but I don't get it, since it uses the Public Key\n",
-        "# to decrypt the cypher text. \n",
-        "# But the encryption was done also with \n",
-        "#print(f\"Decrypt m = ct ** e mod n\")\n",
-        "#m = math.pow( c , e) % n\n",
-        "#print(f\"is {m}\")\n",
-        "\n",
-        "#def decrypt(ct, prv) :\n",
-        "#  n,d = prv\n",
-        "#  return math.pow(ct, d) % n\n",
-        "\n",
-        "#print(f\"Decrypt with private key: {decrypt(c, prv)}\")"
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DWMq0VzMhFul",
-        "outputId": "7475e23c-4048-4c5e-f40a-00ae51194ef0"
+        "outputId": "84045914-a1aa-401e-c9e1-d06f566dc33e"
       },
-      "execution_count": 83,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter the text message to be encrypted: HELP!\n",
-            "Ciphertext is: [185, 293, 171, 5, 528]\n",
-            "Decrypted: [72, 69, 76, 80, 33]\n",
-            "Decrypted message: HELP!\n"
+            "Enter the text message to be encrypted: Hellooooo\n",
+            "Ciphertext is: [185, 301, 193, 193, 310, 310, 310, 310, 310]\n",
+            "Decrypted: [72, 101, 108, 108, 111, 111, 111, 111, 111]\n",
+            "Decrypted message: Hellooooo\n"
           ]
         }
       ]
